2006-04-08  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR classpath/27071
	* gnu/java/security/hash/Whirlpool.java: Updated documentation.
	(DIGEST0): Use version 3 test vector.
	(Sd): Removed.
	(S_box): New field: Version 3 S-box values.
	(<clinit>): Use Version 3 circulant matrix to construct lookup tables.
	(transform): Formating.
	(padBuffer): Likewise.
	(getResult): Likewise.
	(selfTest): Likewise.

2006-04-07  Tom Tromey  <tromey@redhat.com>

	* java/util/InvalidPropertiesFormatException.java
	(serialVersionUID): New field.
	(readObject, writeObject): New methods.
	* java/util/Arrays.java (toString): Javadoc fixes.
	* java/net/URLConnection.java: Cleaned up imports.
	* java/lang/reflect/ParameterizedType.java: Javadoc fix.
	* java/lang/reflect/MalformedParameterizedTypeException.java
	(serialVersionUID): New field.
	* java/lang/reflect/GenericSignatureFormatError.java
	(serialVersionUID): New field.
	* java/lang/Class.java (Class): Javado fixes.
	(getComponentType): Likewise.
	(getGenericInterfaces): Likewise.
	(getTypeParameters): Likewise.
	* java/io/CharArrayWriter.java (append): Javadoc fixes.
	* java/lang/annotation/AnnotationFormatError.java (serialVersionUID):
	New field.
	* java/lang/TypeNotPresentException.java (serialVersionUID): New
	field.
	* java/lang/EnumConstantNotPresentException.java (serialVersionUID):
	New field.

2006-04-07  Wolfgang Baer  <WBaer@gmx.de>

	* java/awt/Dialog.java 
	(AccessibleAWTDialog): Added api docs
	(AccessibleAWTDialog.getAccessibleStateSet):
	 Renamed from getAccessibleState.
	* java/awt/Frame.java 
	(AccessibleAWTFrame): Added api docs
	(AccessibleAWTFrame.getAccessibleStateSet):
	 Renamed from getAccessibleState.

2006-04-07  Wolfgang Baer  <WBaer@gmx.de>

	* java/awt/Dialog.java: Reformatted.

2006-04-07  Lillian Angel  <langel@redhat.com>

	* java/awt/Component.java
	(eventTypeEnabled): Added code for HierarchyEvent.HIERARCHY_CHANGED,
	HierarchyEvent.ANCESTOR_MOVED and HierarchyEvent.ANCESTOR_RESIZED.
